# IGNITE-843 Minor changes for summary page.

--- a/modules/webconfig/nodejs/public/stylesheets/style.less
+++ b/modules/webconfig/nodejs/public/stylesheets/style.less
@@ -964,3 +964,18 @@ input.ng-invalid {
   padding: 10px 5px;
   border-radius: 6px;
 }
+
+.theme-line table.links-edit-small-padding:extend(.theme-line .links table all) {
+  label {
+    line-height: @input-height;
+    color: #666;
+  }
+
+  a {
+    line-height: @input-height;
+  }
+
+  td {
+    padding-left: 5px;
+  }
+}
