--- a/modules/webconfig/nodejs/public/stylesheets/style.less
+++ b/modules/webconfig/nodejs/public/stylesheets/style.less
@@ -975,7 +975,23 @@ input.ng-invalid {
     line-height: @input-height;
   }
 
-  td {
-    padding-left: 5px;
+  input[type="checkbox"] {
+    line-height: 20px;
+    margin-right: 4px;
   }
+
+  .checkbox label {
+    line-height: 20px;
+    vertical-align: middle;
+  }
+
+  th {
+    text-align: center;
+  }
+
+  td {
+    padding-left: 10px;
+  }
+
+  margin-top: 10px;
 }
