--- a/modules/webconfig/nodejs/views/persistence.jade
+++ b/modules/webconfig/nodejs/views/persistence.jade
@@ -21,8 +21,8 @@ append scripts
 
 include includes/controls
 
-mixin dbcheck(chk, clk)
-    input(type='checkbox' ng-checked=chk ng-click=clk)
+mixin dbcheck(chk)
+    input(type='checkbox' style='margin-left: 5px' ng-checked=chk)
 
 block content
     .docs-header
@@ -64,40 +64,44 @@ block content
                                             th Value class
                                     tbody
                                         tr(ng-repeat='row in data.tables')
-                                            td
-                                                input(type='checkbox' ng-if='!row.tableName' ng-checked='row.use' ng-click='selectTable(-1)')
-                                                a(ng-if='!row.tableName' style='margin-left: 5px' ng-click='selectTable(-1)') {{row.schemaName}}
-                                                input(type='checkbox' ng-if='row.tableName' style='margin-left: 10px' ng-checked = 'row.use' ng-click='selectTable($index)')
-                                                a(ng-if='row.tableName' style='margin-left: 5px' ng-click='selectTable($index)') {{row.tableName}}
-                                            td
+                                            td(colspan='{{row.tableName ? 1 : 3}}')
+                                                div.checkbox(ng-if='!row.tableName')
+                                                    label(ng-click='selectSchema($index)')
+                                                        input(type='checkbox' ng-checked='row.use')
+                                                        | {{row.schemaName}}
+                                                div.checkbox(ng-if='row.tableName')
+                                                    label(style='padding-left: 30px' ng-click='selectTable($index)')
+                                                        input(type='checkbox' ng-checked = 'row.use')
+                                                        | {{row.tableName}}
+                                            td(ng-if='row.tableName')
                                                 a(ng-show='data.curTableIdx != $index' ng-click='selectTable($index)') {{row.keyClass}}
                                                 input.form-control(type='text' ng-show='data.curTableIdx == $index' ng-model='data.curKeyClass' placeholder='Key class full name')
-                                            td
+                                            td(ng-if='row.tableName')
                                                 a(ng-show='data.curTableIdx != $index' ng-click='selectTable($index)') {{row.valueClass}}
                                                 input.form-control(type='text' ng-show='data.curTableIdx == $index' ng-model='data.curValueClass' placeholder='Value class full name')
                             div(ng-hide='data.curTableIdx < 0')
                                 table.table-bordered.table-condensed.links-edit-small-padding.col-sm-12(st-table='data.tables[data.curTableIdx].fields')
                                     thead
                                         tr
-                                            th.col-sm-1 Use
-                                            th.col-sm-1 Key
-                                            th.col-sm-1 Ak
-                                            th.col-sm-2 DB Name
-                                            th.col-sm-2 DB Type
-                                            th.col-sm-2 Java Name
-                                            th.col-sm-2 Java Type
+                                            th(style='width:45px') Use
+                                            th(style='width:45px') Key
+                                            th(style='width:45px') Ak
+                                            th DB Name
+                                            th DB Type
+                                            th Java Name
+                                            th Java Type
                                     tbody
                                         tr(ng-repeat='row in data.tables[data.curTableIdx].fields')
                                             td
-                                                +dbcheck('row.use', 'selectField($index)')
+                                                +dbcheck('row.use')
                                             td
-                                                +dbcheck('row.key', 'selectField($index)')
+                                                +dbcheck('row.key')
                                             td
-                                                +dbcheck('row.ak', 'selectField($index)')
+                                                +dbcheck('row.ak')
                                             td
-                                                a(ng-click='selectField($index)') {{row.dbName}}
+                                                label {{row.dbName}}
                                             td
-                                                a(ng-click='selectField($index)') {{row.dbType}}
+                                                label {{row.dbType}}
                                             td
                                                 a(ng-show='data.curFieldIdx != $index' ng-click='selectField($index)') {{row.javaName}}
                                                 input.form-control(type='text' ng-show='data.curFieldIdx == $index' ng-model='data.curJavaName' placeholder='Field Java name')
