--- a/modules/webconfig/nodejs/public/stylesheets/style.less
+++ b/modules/webconfig/nodejs/public/stylesheets/style.less
@@ -577,7 +577,7 @@ a:hover, .link:hover .title {
 }
 
 .modal-body {
-  padding-top: 30px;
+  padding-top: 15px;
 }
 
 h1.ignite-logo {
@@ -693,9 +693,6 @@ table tr:hover{ cursor:pointer; }
   width: auto;
 }
 
-.form-horizontal .control-label {
-  padding-top: 4px;
-}
 
 button .caret {
   float: right;
@@ -944,7 +941,7 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
-input.ng-invalid {
+input.ng-dirty.ng-invalid {
   border-color: #ec1c24;
 
   :focus {
