--- a/modules/webconfig/nodejs/views/login.jade
+++ b/modules/webconfig/nodejs/views/login.jade
@@ -20,24 +20,24 @@
             .modal-header.header
                 div(id='errors-container')
                 button.close(type='button', ng-click='$hide()', aria-hidden='true') &times;
-                h1.navbar-brand.pull-left
+                h1.navbar-brand
                     a(href='/') Apache Ignite Web Configurator
-                h4.modal-title Authentication
-                p Log in or register in order to collaborate
+                h4.modal-title(style='padding-right: 55px') Authentication
+                p(style='padding-right: 55px') Log in or register in order to collaborate
             form.form-horizontal(name='loginForm')
                 .modal-body.row
                     .col-sm-9.login.col-sm-offset-1
-                        .form-group(ng-show='action == "register"')
-                            label.col-sm-3.control-label Full Name:
-                            .controls.col-sm-9
+                        .details-row(ng-show='action == "register"')
+                            label.col-sm-3.required Full Name:
+                            .col-sm-9
                                 input.form-control(type='text', ng-model='user_info.username', placeholder='John Smith', focus-me='action=="register"', ng-required='action=="register"')
-                        .form-group
-                            label.col-sm-3.control-label Email:
-                            .controls.col-sm-9
+                        .details-row
+                            label.col-sm-3.required Email:
+                            .col-sm-9
                                 input.form-control(type='email', ng-model='user_info.email', placeholder='you@domain.com', focus-me='action=="login"', required)
-                        .form-group
-                            label.col-sm-3.control-label Password:
-                            .controls.col-sm-9
+                        .details-row
+                            label.col-sm-3.required Password:
+                            .col-sm-9
                                 input.form-control(type='password', ng-model='user_info.password', placeholder='Password', required)
             .modal-footer
                 a.show-signup.ng-hide(ng-show='action != "login"', ng-click='action = "login";') log in
