IGNITE-843 Cleanup module.

--- a/modules/web-control-center/nodejs/views/layout-sidebar.jade
+++ b/modules/web-control-center/nodejs/views/layout-sidebar.jade
@@ -25,10 +25,10 @@ block container
                         a(ng-class="{active: isActive('/clusters')}" href='/clusters') Clusters
                     li
                         a(ng-class="{active: isActive('/caches')}" href='/caches') Caches
-                    li
-                        a(ng-class="{active: isActive('/persistence')}" href='/persistence') Persistence
-                    li
-                        a(ng-class="{active: isActive('/clients')}" href='/clients') Clients
+                    //li
+                    //    a(ng-class="{active: isActive('/persistence')}" href='/persistence') Persistence
+                    //li
+                    //    a(ng-class="{active: isActive('/clients')}" href='/clients') Clients
                     li
                         p
                         a(ng-class="{active: isActive('/summary')}" href='/summary') Summary
