--- a/modules/web-control-center/nodejs/views/includes/header.jade
+++ b/modules/web-control-center/nodejs/views/includes/header.jade
@@ -22,8 +22,8 @@ header.header(id='header')
             ul.nav.navbar-nav(ng-controller='activeLink')
                 li
                     a(ng-class="{active: isActive('/clusters')}" href='/clusters') Configuration
-                li
-                    a(ng-class="{active: isActive('/sql')}" href='/sql') SQL
+                //li
+                //    a(ng-class="{active: isActive('/sql')}" href='/sql') SQL
             ul.nav.navbar-nav.pull-right(ng-init='user = #{JSON.stringify(user)}')
                 li(ng-show='user')
                     a.dropdown-toggle(data-toggle='dropdown' aria-expanded='true' bs-dropdown data-template='user-dropdown' data-placement='bottom-right') {{user.username}}
