--- a/modules/web-control-center/nodejs/views/summary.jade
+++ b/modules/web-control-center/nodejs/views/summary.jade
@@ -20,13 +20,14 @@ append scripts
     script(src='/javascripts/controllers/summary.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shCore.min.js')    
     script(src='//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushXml.js')    
-    script(src='//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushJava.js')    
-    script(src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js')
-        
+    script(src='//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushJava.js')
+    script(src="//cdn.jsdelivr.net/angularjs/1.3.15/angular-animate.min.js")
+    script(src="//cdn.jsdelivr.net/angularjs/1.3.15/angular-sanitize.min.js")
+
 append css
-    link(rel='stylesheet', href='http://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shCore.css')
-    link(rel='stylesheet', href='http://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shThemeMidnight.css')
-        
+    link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shCore.css')
+    link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shThemeDefault.css')
+
 block content
     .docs-header
         h1 Summary
@@ -81,7 +82,7 @@ block content
                             .form-group
                                 label.control-label.col-sm-3(for='os') Operation System
                                 .col-sm-6
-                                    input#os.form-control(type='text', ng-model='dockerArg.os', placeholder='debian:8')
+                                    input#os.form-control(type='text', ng-model='dockerArg.os', placeholder='debian:8' data-min-length="0" data-html="1" data-auto-select="true" data-animation="am-flip-x" bs-typeahead bs-options='os for os in oss')
                                 
                             .form-group
                                 | Download as 
