--- a/modules/web-control-center/nodejs/views/includes/header.jade
+++ b/modules/web-control-center/nodejs/views/includes/header.jade
@@ -22,6 +22,8 @@ header.header(id='header')
             ul.nav.navbar-nav(ng-controller='activeLink')
                 li
                     a(ng-class="{active: isActive('/clusters')}" href='/clusters') Configuration
+                li
+                    a(ng-class="{active: isActive('/monitor')}" href='/monitor/cluster') Monitoring
                 //li
                 //    a(ng-class="{active: isActive('/sql')}" href='/sql') SQL
             ul.nav.navbar-nav.pull-right(ng-init='user = #{JSON.stringify(user)}')
