--- a/modules/web-control-center/nodejs/views/summary.jade
+++ b/modules/web-control-center/nodejs/views/summary.jade
@@ -21,6 +21,7 @@ append scripts
     script(src='//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shCore.min.js')    
     script(src='//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushXml.js')    
     script(src='//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushJava.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushPlain.js')
     script(src="//cdn.jsdelivr.net/angularjs/1.3.15/angular-animate.min.js")
     script(src="//cdn.jsdelivr.net/angularjs/1.3.15/angular-sanitize.min.js")
 
@@ -61,34 +62,34 @@ block content
                             img(src='images/docker.png', width='16px' height='16px')
                             |  Dockerfile
 
-                div(style='padding-top: 10px')        
+                .settings-row
                     #xmlResult(ng-show="cfgLang == 'xml'")
-                        #xmlResultDiv
-                
-                    #javaResult(ng-show="cfgLang == 'java'")
                         label
-                            input(type='checkbox', ng-model="generateJavaClass")
-                            | generate java class.
+                        button.btn.btn-primary.pull-right(style='margin-right: 0px;' ng-click='$scope.download($scope.xmlData, $scope.selectedItem.name + ".xml")') Download
+
+                        #xmlResultDiv
+                    #javaResult(ng-show="cfgLang == 'java'")
+                        .col-sm-1
+                            label Generate:
+                        .col-sm-3
+                            button.form-control(ng-model='generateJavaClass' bs-select data-placeholder='{{detail.placeholder}}' bs-options='item.value as item.label for item in generateJavaItems')
+
+                        button.btn.btn-primary.pull-right(style='margin-right: 0px;' ng-click='downloadJava()') Download
 
                         #javaResultDiv
-                    
                     #dockerResult(ng-show="cfgLang == 'docker'")
                         p
                             a(href='https://docs.docker.com/reference/builder') Dockerfile
-                            | is a text file with instructions to create Docker image. To build image you have to
-                            | store following Docker file with your xml ignite configurations to the same directory. 
-                        
-                        form.form-horizontal
-                            .form-group
-                                label.control-label.col-sm-3(for='os') Operation System
-                                .col-sm-6
-                                    input#os.form-control(type='text', ng-model='dockerArg.os', placeholder='debian:8' data-min-length="0" data-html="1" data-auto-select="true" data-animation="am-flip-x" bs-typeahead bs-options='os for os in oss')
-                                
-                            .form-group
-                                | Download as 
-                                a(href, ng-click='downloadDocker()') file
-                                
-                                textarea.form-control(rows=30, readonly=true)
-                                    | {{ dockerFile() }}
+                            | &nbspis a text file with instructions to create Docker image. To build image you have to
+                            | store following Docker file with your xml ignite configurations to the same directory.
+
+                        .col-sm-2
+                            label(for='os') Operation System:
+                        .col-sm-4
+                            input#os.form-control(type='text', ng-model='dockerArg.os' placeholder='debian:8' data-min-length="0" data-html="1" data-auto-select="true" data-animation="am-flip-x" bs-typeahead bs-options='os for os in oss')
+
+                        button.btn.btn-primary.pull-right(style='margin-right: 0px;' ng-click='downloadDocker()') Download
+
+                        .settings-row#dockerResultDiv(style='margin-top: 15px')
 
                 div(ng-show='generateError') {{generateError}}
