IGNITE-843 Fixed text on summary page.

--- a/modules/web-control-center/nodejs/views/summary.jade
+++ b/modules/web-control-center/nodejs/views/summary.jade
@@ -61,35 +61,28 @@ block content
                         a(href, ng-click='cfgLang = "docker"')
                             img(src='images/docker.png', width='16px' height='16px')
                             |  Dockerfile
-
-
                 .settings-row
                     #xmlResult(ng-show="cfgLang == 'xml'")
                         button.btn.btn-primary.pull-right(style='margin-right: 0px;margin-top: -45px' ng-click='download(xmlData, selectedItem.name + ".xml")') Download
-
                         #xmlResultDiv
                     #javaResult(ng-show="cfgLang == 'java'")
                         .col-sm-1
                             label Generate:
                         .col-sm-3
                             button.form-control(ng-model='generateJavaClass' bs-select data-placeholder='{{detail.placeholder}}' bs-options='item.value as item.label for item in generateJavaItems')
-
                         button.btn.btn-primary.pull-right(style='margin-right: 0px;margin-top: -40px' ng-click='downloadJava()') Download
-
                         #javaResultDiv
                     #dockerResult(ng-show="cfgLang == 'docker'")
                         button.btn.btn-primary.pull-right(style='margin-right: 0px;margin-top: -40px' ng-click='downloadDocker()') Download
-
                         p
-                            a(href='https://docs.docker.com/reference/builder') Dockerfile
-                            | &nbspis a text file with instructions to create Docker image. To build image you have to
-                            | store following Docker file with your xml ignite configurations to the same directory.
-
+                            a(href='https://docs.docker.com/reference/builder') Docker&nbsp;
+                            | file is a text file with instructions to create Docker image.<br/>
+                            | To build image you have to store following Docker file with your Ignite XML configuration to the same directory.<br>
+                            | Also you could use predefined&nbsp;
+                            a(href='https://ignite.incubator.apache.org/download.html#docker') Apache Ignite docker image.
                         .col-sm-2
                             label(for='os') Operation System:
                         .col-sm-4
                             input#os.form-control(type='text', ng-model='dockerArg.os' placeholder='debian:8' data-min-length="0" data-html="1" data-auto-select="true" data-animation="am-flip-x" bs-typeahead bs-options='os for os in oss')
-
                         .settings-row#dockerResultDiv(style='margin-top: 15px')
-
                 div(ng-show='generateError') {{generateError}}
