IGNITE-843 Changed text in footer.

--- a/modules/web-control-center/nodejs/views/includes/footer.jade
+++ b/modules/web-control-center/nodejs/views/includes/footer.jade
@@ -17,7 +17,4 @@
 .container.container-footer
     footer
         center
-            p
-                | Powered by
-                a(href='http://ignite.incubator.apache.org')  Apache Ignite
-                | , version 1.1.0
+            p Apache Ignite Control Center, version 1.0.0
