IGNITE-843 Added link to Apache Ignite Docker docs.

--- a/modules/web-control-center/nodejs/views/summary.jade
+++ b/modules/web-control-center/nodejs/views/summary.jade
@@ -80,6 +80,8 @@ block content
                             | To build image you have to store following Docker file with your Ignite XML configuration to the same directory.<br>
                             | Also you could use predefined&nbsp;
                             a(href='https://ignite.incubator.apache.org/download.html#docker') Apache Ignite docker image.
+                            | For more information about using Ignite with Docker please read&nbsp;
+                            a(href='http://apacheignite.readme.io/docs/docker-deployment') documentation.
                         .col-sm-2
                             label(for='os') Operation System:
                         .col-sm-4
