--- a/modules/web-control-center/nodejs/views/includes/header.jade
+++ b/modules/web-control-center/nodejs/views/includes/header.jade
@@ -18,13 +18,13 @@ header.header(id='header')
     .container
         h1.navbar-brand
             a(href='/') Apache Ignite Web Configurator
-        .navbar-collapse.collapse(ng-controller='auth')
-            ul.nav.navbar-nav(ng-controller='activeLink')
+        .navbar-collapse.collapse(ng-controller='auth' ng-init='user = #{JSON.stringify(user)}')
+            ul.nav.navbar-nav(ng-controller='activeLink' ng-show='user')
                 li
                     a(ng-class="{active: isActive('/clusters')}" href='/clusters') Configuration
                 //li
                 //    a(ng-class="{active: isActive('/sql')}" href='/sql') SQL
-            ul.nav.navbar-nav.pull-right(ng-init='user = #{JSON.stringify(user)}')
+            ul.nav.navbar-nav.pull-right
                 li(ng-show='user')
                     a.dropdown-toggle(data-toggle='dropdown' aria-expanded='true' bs-dropdown data-template='user-dropdown' data-placement='bottom-right') {{user.username}}
                         span.caret
