--- a/modules/web-control-center/nodejs/public/stylesheets/style.less
+++ b/modules/web-control-center/nodejs/public/stylesheets/style.less
@@ -620,7 +620,7 @@ h1.ignite-logo {
 }
 
 .details-row {
-  padding-left: 1.3em;
+  padding: 0 0.65em;
 }
 
 .details-table-row  {
@@ -735,7 +735,7 @@ button .caret {
 }
 
 .theme-line .main-content a.customize {
-  //margin-left: 10px;
+  margin-left: 5px;
   color: #ec1c24;
   cursor: pointer;
 }
@@ -774,6 +774,21 @@ button .caret {
   }
 }
 
+.theme-line table.links-edit-details:extend(.theme-line .links table all) {
+  label {
+    line-height: @input-height;
+    color: #666;
+  }
+
+  td {
+    padding: 0;
+
+    .input-tip {
+      padding: 0;
+    }
+  }
+}
+
 .btn {
   padding: 3px 6px;
 }
@@ -783,9 +798,9 @@ button .caret {
 }
 
 .panel-details {
-  margin-top: 1.3em;
-  margin-bottom: 0.65em;
-  padding: 0.65em;
+  margin-top: 0.65em;
+
+  padding: 0;
 
   border-radius: 4px;
   border: thin dotted lightgrey;
@@ -814,7 +829,6 @@ label {
 .input-tip {
   display: block;
   overflow: hidden;
-  padding-right:4px;
 }
 
 .labelField {
@@ -822,10 +836,24 @@ label {
   margin-right: 4px;
 }
 
+.stackTipField {
+  float: right;
+  line-height: @input-height;
+  margin-left: 5px;
+}
+
+.form-horizontal .form-group {
+  margin: 0;
+}
+
+.form-horizontal .has-feedback .form-control-feedback {
+  right: 0;
+}
+
 .tipField {
   float: right;
   line-height: @input-height;
-  margin-right: 5px;
+  margin-left: 5px;
 }
 
 .tipLabel {
@@ -856,8 +884,6 @@ label {
 
 .fa-remove {
   color: #ec1c24;
-  margin-left: 5px;
-  margin-right: 5px;
   cursor: pointer;
 }
 
