--- a/modules/web-control-center/nodejs/views/includes/header.jade
+++ b/modules/web-control-center/nodejs/views/includes/header.jade
@@ -21,7 +21,7 @@ header.header(id='header')
         .navbar-collapse.collapse(ng-controller='auth' ng-init='user = #{JSON.stringify(user)}')
             ul.nav.navbar-nav(ng-controller='activeLink' ng-show='user')
                 li
-                    a(ng-class="{active: isActive('/clusters')}" href='/clusters') Configuration
+                    a(ng-class="{active: isActive('/configuration')}" href='/configuration/clusters') Configuration
                 //li
                 //    a(ng-class="{active: isActive('/sql')}" href='/sql') SQL
             ul.nav.navbar-nav.pull-right
